# TumorTracer

./: .gitignore  Dockerfile  README.md  app.py  dvc.yaml  main.py  params.yaml  pyproject.toml  requirements.txt  template.py
config/: class_name_map.yaml  config.yaml
model/: class_indices.json
params/: params.yaml
research/: trails_base_model.ipynb  trails_model_evaluations.ipynb  trails_model_selector.ipynb  trails_serve_best_model.ipynb  trials.ipynb  trials_data_ingestion.ipynb  trials_hyperparameter_search.ipynb  trials_model_training.ipynb  trials_prediction.ipynb
src/cnnClassifier/: __init__.py
src/cnnClassifier/components/: base_model.py  data_ingestion.py  model_selection.py  model_training.py  predictions.py
src/cnnClassifier/config/: configurations.py
src/cnnClassifier/entity/: config_entity.py
src/cnnClassifier/pipeline/: __init__.py  predictions.py  stage_01_data_ingestion.py  stage_02_base_model.py  stage_03_model_training.py  stage_04_model_selection.py
src/cnnClassifier/utils/: common.py  kaggle_auth.py
